--- a/index.html
+++ b/index.html
@@ -6,49 +6,30 @@
     <title>Aryam Juneja - Resume</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-            text-align: center;
-        }
-        header {
-            background-color: #0073e6;
-            color: white;
-            padding: 20px;
-        }
-        header h1 {
-            margin: 0;
-        }
-        .container {
-            margin: 20px auto;
-            width: 90%;
-            max-width: 800px;
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
         iframe {
-            width: 100%;
-            height: 600px;
-            border: 1px solid #ccc;
-            margin-top: 20px;
+            width: 90%;
+            height: 90%;
+            border: none;
         }
     </style>
     <script>
         // Automatically download the resume
         window.onload = function () {
             const link = document.createElement('a');
-            link.href = "Resume_Aryam_Juneja.pdf"; // Path to your resume
-            link.download = "Resume_Aryam_Juneja.pdf";
+            link.href = "assets/Aryam_Juneja_Resume.pdf"; // Path to your resume
+            link.download = "Aryam_Juneja_Resume.pdf";
             link.click();
         };
     </script>
 </head>
 <body>
-    <header>
-        <h1>Aryam Juneja - Resume</h1>
-    </header>
-    <div class="container">
-        <iframe src="Resume_Aryam_Juneja.pdf"></iframe>
-    </div>
+    <iframe src="assets/Aryam_Juneja_Resume.pdf"></iframe>
 </body>
 </html>
