--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         // Automatically download the resume
         window.onload = function () {
             const link = document.createElement('a');
-            link.href = "assets/Aryam_Juneja_Resume.pdf"; // Path to your resume
-            link.download = "Aryam_Juneja_Resume.pdf";
+            link.href = "Resume_Aryam_Juneja.pdf"; // Path to your resume
+            link.download = "Resume_Aryam_Juneja.pdf";
             link.click();
         };
     </script>
 </head>
 <body>
-    <iframe src="assets/Aryam_Juneja_Resume.pdf"></iframe>
+    <iframe src="Resume_Aryam_Juneja"></iframe>
 </body>
 </html>
