--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     </script>
 </head>
 <body>
-    <iframe src="Resume_Aryam_Juneja"></iframe>
+    <iframe src="Resume_Aryam_Juneja.pdf"></iframe>
 </body>
 </html>
