--- a/index.html
+++ b/index.html
@@ -14,22 +14,13 @@
             height: 100vh;
         }
         iframe {
-            width: 90%;
-            height: 90%;
+            width: 100%;
+            height: 100%;
             border: none;
         }
     </style>
-    <script>
-        // Automatically download the resume
-        window.onload = function () {
-            const link = document.createElement('a');
-            link.href = "Resume_Aryam_Juneja.pdf"; // Path to your resume
-            link.download = "Resume_Aryam_Juneja.pdf";
-            link.click();
-        };
-    </script>
 </head>
 <body>
-    <iframe src="Resume_Aryam_Juneja.pdf"></iframe>
+    <iframe src="assets/Aryam_Juneja_Resume.pdf"></iframe>
 </body>
 </html>
