--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-    <iframe src="Aryam_Juneja_Resume_SWE.pdf"></iframe>
+    <iframe src="Resume_Aryam_Juneja.pdf"></iframe>
 </body>
 </html>
